src/qt/res/css/default.css
/* ... */
    
    QValueComboBox QAbstractItemView::item {
    margin:4px;
    }
    
    QValueComboBox::item {
    color:#2d303a;
    }
    
    QValueComboBox::item:alternate {
    background:#f9ffdc;
    }
    
    QValueComboBox::item:selected {
    border:0px solid transparent;
    background:#f2f2f2;
    }
    
    QValueComboBox::indicator {
    background-color:transparent;
    selection-background-color:transparent;
    color:transparent;
    selection-color:transparent;
    }

/****************************************************************************************/

QHeaderView { /* Table Header */
background-color:transparent;
outline:0;
}

QHeaderView::section { /* Table Header Sections */
qproperty-alignment:center;
background-color: transparent;
color:#f9ffdc;
min-height:35px;
/* font-weight:bold;
font-size:11px; */
font-size:14px;
border:0;
border-right:1px solid #a8ad99;
padding-left:5px;
padding-right:5px;
padding-top:2px;
padding-bottom:2px;
font-family:'Andale Mono'
}

QHeaderView::down-arrow {
    image: url(':/images/downArrow_small_white');
}

QHeaderView::up-arrow {
    image: url(':/images/upArrow_small_white');
}

QHeaderView::section:last {
border-right:0;
}

.QScrollArea {
background:transparent;
border:0;
}

.QTableView { /* Table - has to be selected as a class otherwise it throws off QCalendarWidget */
background:transparent;
border:0;
}

QTableView::item { /* Table Item */
background-color:transparent;
font-size:12px;
color:#f9ffdc;
}

QTableView::item:selected { /* Table Item Selected */
background-color: rgba(0,0,0,0.1);
color:#f9ffdc;
}

QTableWidget { /* Table Background */
background-color: transparent;
alternate-background-color: transparent;
border:0;
}

QTableWidget:focus, QTableView, QTableView:focus { /* Remove focus outline */
outline:0;
background:transparent;
}

QTreeWidget { /* Tree Background */
background-color:#fcfcfc;
alternate-background-color:#f2f2f2;
color:#333;
}

QScrollBar {
	/* Scroll Bar */
}
QScrollBar:vertical {
	/* Vertical Scroll Bar Attributes */
	border: 0;
	background: transparent;
	width: 12px;
    margin: 0;
    
}
QScrollBar:horizontal {
	/* Horizontal Scroll Bar Attributes */
	border: 0;
	background: transparent;
	height: 12px;
    /* margin: 0px 18px 0px 18px; */
    margin:0;
    
}
QScrollBar::handle:vertical {
	/* Scroll Bar Slider - vertical */
	background: #f9ffdc;
    border-radius: 6px;
    min-height:50px;
    width:3px;
    /* border:2px solid transparent; */
    
	
}

QScrollBar::handle:horizontal {
	/* Scroll Bar Slider - horizontal */
	background: #f9ffdc;
    min-width: 20px;
    border-radius: 6px;
}
QScrollBar::add-page,
QScrollBar::sub-page {
	/* Scroll Bar Background */
	background: transparent;
}
QScrollBar::add-line:vertical,
QScrollBar::sub-line:vertical,
QScrollBar::add-line:horizontal,
QScrollBar::sub-line:horizontal {
	/* Define Arrow Button Dimensions */
	background: none;
	border: 0;
	width: 16px;
	height: 16px;
}
QScrollBar::add-line:vertical:pressed,
QScrollBar::sub-line:vertical:pressed,
QScrollBar::add-line:horizontal:pressed,
QScrollBar::sub-line:horizontal:pressed {
	background-color: #e0e0e0;
}
QScrollBar::sub-line:vertical {
	/* Vertical - top button position */
	subcontrol-position: top;
	subcontrol-origin: margin;
}
QScrollBar::add-line:vertical {
	/* Vertical - bottom button position */
	subcontrol-position: bottom;
	subcontrol-origin: margin;
}
QScrollBar::sub-line:horizontal {
	/* Vertical - left button position */
	subcontrol-position: left;
	subcontrol-origin: margin;
}
QScrollBar::add-line:horizontal {
	/* Vertical - right button position */
	subcontrol-position: right;
	subcontrol-origin: margin;
}
QScrollBar:up-arrow,
QScrollBar:down-arrow,
QScrollBar:left-arrow,
QScrollBar:right-arrow {
	/* Arrows Icon */
	width: 10px;
	height: 10px;
	display: none;
	opacity: 0;
}
QScrollBar:up-arrow {
	background: none;
}
QScrollBar:down-arrow {
    /* background-image: url(':/images/downArrow_small'); */
    background: none;
}
QScrollBar:left-arrow {
    /* background-image: url(':/images/leftArrow_small'); */
    background: none;
}
QScrollBar:right-arrow {
    /* background-image: url(':/images/rightArrow_small'); */
    background: none;
}
QSlider::handle:horizontal {
	background-color: #8a8a8a;
	border: 0;
	border-radius: 6px;
}
QSlider::sub-page:horizontal {
	background-color: #414a55;
	border: 0;
	border-radius: 6px;
}
QSlider::add-page:horizontal {
	/* background-color:rgba(255, 255, 255, 0.08); */
	background-color: #222d3a;
	border: 0;
	border-radius: 6px;
}
/**************************** HIDE ARROWS **********************************************/

QScrollBar::add-line:vertical {
	height: 0px;
}
QScrollBar::sub-line:vertical {
	height: 0px;
}
QScrollBar::add-page:vertical,
QScrollBar::sub-page:vertical {
	height: 0px;
}

/**************************** DIALOG BOXES **********************************************/

QDialog {
background-color: #fff;
}
AskPassphraseDialog {
background-color: #fff;
}


QDialog .QTabWidget QTabBar::tab {
    padding: 8px 20px;
}
/* QDialog .QTabWidget {
border-bottom:1px solid #333;
}

QDialog .QTabWidget::pane {
border: 1px solid #d7d7d7;
}

QDialog .QTabWidget QTabBar::tab {
background-color:transparent;
color:#333;
padding-left:10px;
padding-right:10px;
padding-top:5px;
padding-bottom:5px;
border-top: 1px solid #d7d7d7;
}

QDialog .QTabWidget QTabBar::tab:first {
border-left: 1px solid #d7d7d7;
}

QDialog .QTabWidget QTabBar::tab:last {
border-right: 1px solid #d7d7d7;
}

QDialog .QTabWidget QTabBar::tab:selected, QDialog .QTabWidget QTabBar::tab:hover {
background-color:#ffffff;
color:#333;
} */

QDialog .QTabWidget .QWidget {
background-color:transparent;
color:#333;
border:0;
}

QDialog .QTabWidget .QWidget QAbstractSpinBox {
min-height:15px;
}

QDialog .QTabWidget .QWidget QAbstractSpinBox::down-button {
width:15px;
}

QDialog .QTabWidget .QWidget QAbstractSpinBox::up-button {
width:15px;
}

QDialog .QTabWidget .QWidget QComboBox {
min-height:15px;
}
/* ... */

